<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="AppName">SerialConn</string>
    <string name="title">SerialConn</string>
    <string name="title_activity_e">搜索附近的设备</string>
    <string name="select_device">搜索结果</string>
    <string name="available">可用的：</string>
    <string name="scan">点击搜索</string>
    <string name="none_found">为您找到的:</string>
    <string name="title_paired_devices">与您的设备已配对的:</string>
    <string name="none_paired">没有已配对的设备</string>
    <string name="scanning">正在搜索…</string>
    <string name="edit_text">默认⑴。</string>
    <string name="thank_text">\n感谢您的使用\n如有任何建议请直接呼出菜单反馈。\n\n</string>
    <string name="back">点击回到发送界面</string>
    <string name="notify">点击返回设备列表窗口</string>
    <string name="minimized">已最小化</string>
    <string name="pull">点此可拖动</string>
    <string name="min">最小化</string>
    <string name="testing">测试测试</string>
    <string name="begin">开始</string>
    <string name="stop">暂停</string>
    <string name="hide">隐藏</string>
    <string name="range">幅度</string>
    <string name="legend">图例：</string>
    <string name="arrows">⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂     ⇂</string>
    <string name="CH0">CH0</string>
    <string name="CH1">CH1</string>
    <string name="item" tools:ignore="ExtraTranslation" />
    <string name="sensor">传感器</string>
    <string name="vChart">图表</string>>
    <string name="url">源码</string>
    <string name="thank">更多</string>
    <string name="feed">反馈</string>
    <string name="_new">其他</string>
    <string name="exit">退出</string>
    <string name="typenone">未输入</string>
    <string name="window">数据发送窗口</string>
    <string name="_0">❨0❩</string>
    <string name="cmd_0">A00</string>
    <string name="cmd_hu">Q00</string>
    <string name="cmd_hr">R00</string>
    <string name="cmd_hl">L00</string>
    <string name="cmd_hd">H00</string>
    <string name="tobegin">点击按钮开始操作</string>
    <string name="findable">可检测性</string>
    <string name="entery">点击进入</string>
    <string name="sdcard_device2device">接收到的数据将保存于sdcard/Device2Device目录下</string>
    <string name="illreply">请输入你要说的话,我应该会很快回复的。</string>
    <string name="email">mailto:909006258@qq.com</string>
    <string name="canbefind">可检测性已开启</string>
    <string name="retry">请打开蓝牙后重试</string>
    <string name="unsupport">设备不受支持</string>
    <string name="openbt">请打开蓝牙</string>
    <string name="dbclick">双击退出界面</string>
    <string name="exitapp">双击完全退出应用</string>
    <string name="github">https://github.com/tsymiar/Device2Device/tree/master/SerialConn</string>
    <string name="developing">该功能尚在开发…请稍等</string>
    <string name="saved">已保存。</string>
    <string name="filelocal">/Device2Device/signal.dat</string>
    <string name="data_recvd">接收的数据</string>
    <string name="sensor_title">Canvas-图表</string>

</resources>
