<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="right"
	android:background="@color/black"
	tools:ignore="RtlHardcoded">

	<TextView
		android:id="@+id/devlist_title_devices"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_paired_devices"
		android:visibility="gone"
		android:background="@color/green_ok"
		android:textColor="@color/white"
		android:paddingLeft="5dp"
		tools:ignore="RtlSymmetry" />

	<ListView
		android:id="@+id/devlist_paired_devices"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stackFromBottom="true"
		android:layout_weight="1"/>

	<TextView
		android:id="@+id/devlist_title_new_devices"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/available"
		android:visibility="gone"
		android:background="@color/green_ok"
		android:textColor="@color/white"
		android:paddingLeft="5dp"
		tools:ignore="RtlSymmetry" />

	<ListView
		android:id="@+id/new_devices"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stackFromBottom="true"
		android:layout_weight="2"/>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:alpha="0.5"
			android:src="@drawable/ic_action_search"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:contentDescription=""
			tools:targetApi="honeycomb"
			tools:ignore="ContentDescription" />

		<TextView
			android:id="@+id/scan"
			android:layout_height="wrap_content"
			android:text="@string/scan"
			android:layout_width="wrap_content"
			android:layout_toLeftOf="@id/imageView1"
			android:textSize="15sp"
			tools:ignore="RelativeOverlap" />
        <Button
             android:id="@+id/btn1"
             android:layout_height="wrap_content"
             android:text="@string/exit"
             android:layout_width="wrap_content"
             android:textSize="15sp"/>

	</RelativeLayout>

</LinearLayout>

