<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="25dip"
            android:text="@string/tobegin"
            android:textColor="@color/black"
            android:textSize="24.5sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dip"
            android:text="@string/findable" />

        <Button
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dip"
            android:text="@string/entery" />

    </LinearLayout>

</LinearLayout>

