<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/grey">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sdcard_device2device"
        android:layout_centerHorizontal="true"
        android:textColor="@color/menu_submenu"
        android:layout_alignParentTop="true"
        android:id="@+id/sendingTextView1"
        android:textAlignment="center"
        android:autoLink="all"
        tools:ignore="ObsoleteLayoutParam" />

    <TextView
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_below="@id/sendingTextView1"
        tools:ignore="ObsoleteLayoutParam" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/switch0"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:src="@drawable/switch0"
            android:layout_centerInParent="true"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/right"
            android:layout_toRightOf="@id/switch0"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription"
            android:layout_toEndOf="@id/switch0" />

        <ImageView
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/up"
            android:layout_above="@id/switch0"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/left"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/switch0"
            tools:ignore="ContentDescription"
            android:layout_toStartOf="@id/switch0" />

        <ImageView
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/down"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/switch0"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:id="@+id/btn0"
            android:layout_below="@id/edit_text"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_player"
            android:layout_toRightOf="@id/edit_text"
            android:layout_above="@id/btn0"
            android:layout_toEndOf="@id/edit_text"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/edit_text"
            android:textIsSelectable="false"
            android:inputType="textCapCharacters"
            android:hint="@string/edit_text"
            android:maxLength="8"
            android:textColorHint="#779988"
            android:layout_weight="2"
            android:typeface="monospace"
            android:width="70dp"
            android:layout_toLeftOf="@id/imageView2"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/background_dark"
            tools:ignore="ObsoleteLayoutParam,RelativeOverlap"
            android:layout_toStartOf="@id/imageView2" />

        <TextView
            android:id="@+id/sdt"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            tools:ignore="NotSibling"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>